Ajout fenetre rapport

--- a/prjGestionCC_Qt/Mainwindow.ui
+++ b/prjGestionCC_Qt/Mainwindow.ui
@@ -81,6 +81,9 @@
       <height>171</height>
      </rect>
     </property>
+    <property name="frameShape">
+     <enum>QFrame::Box</enum>
+    </property>
     <property name="text">
      <string/>
     </property>
@@ -94,8 +97,24 @@
       <height>111</height>
      </rect>
     </property>
+    <property name="frameShape">
+     <enum>QFrame::Box</enum>
+    </property>
     <property name="text">
      <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>450</x>
+      <y>380</y>
+      <width>261</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Importer les transactions</string>
     </property>
    </widget>
   </widget>
