--- a/prjGestionCC_Qt/Mainwindow.ui
+++ b/prjGestionCC_Qt/Mainwindow.ui
@@ -28,9 +28,9 @@
     <property name="geometry">
      <rect>
       <x>450</x>
-      <y>90</y>
+      <y>10</y>
       <width>311</width>
-      <height>211</height>
+      <height>291</height>
      </rect>
     </property>
     <property name="font">
@@ -218,7 +218,7 @@
    </property>
    <widget class="QMenu" name="menuFichier">
     <property name="title">
-     <string>Fichier</string>
+     <string>&amp;Fichier</string>
     </property>
     <addaction name="action_Import_Op_rations"/>
    </widget>
